# mtgradient

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  exploration.ipynb  pyproject.toml  seventeen_lands_drafter.ipynb  training.ipynb  ui_notebook.ipynb
artifacts/: card_ids.json
artifacts/NEO/: card_ids.json
mtgradient/: card_initializer.py  constants.py  datasets.py  expansion_info.py  models.py  processing.py
mtgradient/data_retrieval/: ratings.py
mtgradient/log_parsing/: __init__.py
mtgradient/log_parsing/follower_logic/: __init__.py  mtga_follower.py
tests/: test_draft_parser.py
tests/testdata/: card_map.json  dataset.pkl  test_premier_draft.csv
