[tool.poetry]
name = "mtgradient"
version = "0.1.0"
description = "MTG models"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "1.5.8"
pandas = "1.4.2"
requests = "2.27.1"
torch = "1.11.0"
jupyter = "1.0.0"
plotly = "5.9.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
nb-black = "1.0.7"
pytest = "7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
