[tool.poetry]
name = "mtgradient"
version = "0.2.0"
description = "MTG models"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
pytorch-lightning = "2.0.3"
pandas = "1.4.2"
torch = "2.0.0"
jupyter = "1.0.0"
plotly = "5.9.0"
mlflow = "2.2.0"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pytest = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
